# hydrate-model

./: pyproject.toml
hydrate_project/: main.py
hydrate_project/core/: database.py
hydrate_project/eos_model/: base.py  pr_eos.py  pt_eos.py  srk_eos.py
hydrate_project/solvers/: equilibrium.py
hydrate_project/thermo_model/: john_holder.py
hydrate_project/utils/: metrics.py  parameter_fitting.py  visualize.py
hydrate_project/water_activity_model/: mod_unifac.py
